--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,10 @@
 
         <!--image header of the page-->
         <section id="main-space">
-            <div id=main-image3></div>
-            <div id="main-me" style="text-align: center;">
+                <div class="row header-section">
+                    <div class="col-lg-12 col-md-12 main-image4">
+                        <img class="main-image3" src="assets/images/projects.jpg" alt="profile backing">
+                    </div>
             </div>
         </section>
 
@@ -64,7 +66,7 @@
                 <!--splitting the section focusing on the quck links -->
                 <div class="col-12 col-md-4 quick-links">
 
-                    <h5 id="qlabel">Quick Links</h5>
+                    <h5 id="qlabels">Quick Links</h5>
                     <div class="qlinks">
                         <a href="contact_me.html" class="foot-email">
                             <h5 id="email_address_head">Home</h5>
