--- a/index.html
+++ b/index.html
@@ -1,211 +1,161 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Adnan Muhtadi Portfolio</title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" type="text/css" />
+        <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+        <title>Adnan Muhtadi Portfolio</title>
+    </head>
 
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-
-    <!-- font awesome for icons -->
-    <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
-
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-</head>
-
-<body>
-
-    <!--        navigation bar with the active class when on the actual page  -->
-    <header>
-        <a href="index.html">
-            <h2 class="active" id="home" a href="index.html">Adnan Muhtadi</h2>
-        </a>
-
+    <body>
+        <!--        navigation bar with the active class when on the actual page  -->
         <nav>
-            <ul id="navbar-menu">
-                <li>
-                    <a href="connect.html">Connect</a>
-                </li>
+            <div class="row nav-section">
+                <div class="col-lg-4 active mainhome">
+                    <h1><a href="index.html">Adnan Muhtadi</a></h1>
+                </div>
 
-                <li>
-                    <a href="portfolio.html">Portfolio</a>
-                </li>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-1"></div>
 
-                <li>
-                    <a href="journey.html">My Journey</a>
-                </li>
+                <div class="col-lg-2 right">
+                    <h2><a href="journey.html">My Journey</a></h2>
+                </div>
 
-            </ul>
+                <div class="col-lg-2 right">
+                    <h2><a href="portfolio.html">My Portfolio</a></h2>
+                </div>
+
+                <div class="col-lg-2 right">
+                    <h2><a href="connect.html">Connect</a></h2>
+                </div>
+            </div>
         </nav>
-    </header>
 
-    <!--image header of the page-->
-    <section id="main-space">
-        <div id=main-image></div>
-        <div id="main-me">
-            <img src="assets/images/me.jpg" height="" width="400px">
 
-            <div class="main-me-text">
-                <div class="title">
-                    <h2>Project Manager / Trainee Full Stake Developer</h2>
+        <header>
+            <div class="row no-gutter header-section">
+                <div class="col-lg-12 bg-image1"></div>
+                <div class="col-lg-12">
+                    <img class="profile-pic" src="https://adnanmuhtadi.github.io/milestone-project-1/assets/images/me.jpg" alt="Profile Picture">
+                    <h2>Project Manager / Trainee Full Stack Developer</h2>
                     <h3>Personal Portfolio</h3>
                 </div>
             </div>
-        </div>
-    </section>
+        </header>
 
-    <section id="about-me">
-        <h2 id="header">About Me</h2>
+        <div class="main-section">
+            <h1 class="title">About Me</h1>
+            <div class="row">
+                <div class="col-lg-8 aboutme">
+                    <p>A versatile Project Manager professional with over 5 years’ experience with enterprise-level and consumer-focused technology solutions. Champions supportive and collaborative team environments to effectively realise business objectives with proven success in developing and implementing internal and consumer-facing IP.</p>
+                </div>
 
-        <!--description about myself-->
-        <div class="about-me-section">
-            <img src="assets/images/chess.jpg" height="250" width="400px">
-
-            <div class="about-me-des">
-                A versatile Project Manager professional with over 5 years’ experience with enterprise-level and consumer-focused technology solutions. Champions supportive and collaborative team environments to effectively realise business objectives with proven success in developing and implementing internal and consumer-facing IP.
-
+                <div class="col-lg-4">
+                    <img class="aboutme-img" src="assets/images/chess.jpg" alt="">
+                </div>
             </div>
-        </div>
-    </section>
-
-    <!--   Covering the interest that i have in a column format while having the text coming from both side of the images that was all taken from https://unsplash.com/-->
-    <section class="interest-section">
-        <h2 id="header">Interests</h2>
-        <div class="categories">
 
             <div class="row">
-                <div class="column">
-
+                <div class="col-lg-12">
+                    <h1 class="title">Interests</h1>
                 </div>
-
-                <div class="column">
-                    <img id="interest" src="assets/images/travelling.jpg" height="100%" width="100%">
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4">
+                    <img class="plane-img" src="assets/images/travelling.jpg" alt="Plane">
                 </div>
-
-                <div class="column left-comment">
+                <div class="col-lg-4 travel-info">
                     <h2>Travelling</h2>
                     <p>Exploring the world and seeing the different nature beauties that it provides. Experience something unfamiliar and leave with new skills or knowledge</p>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="column right-comment">
+                <div class="col-lg-4 programming-info">
                     <h2>Programming</h2>
                     <p>The pleasure of making things that are useful to yourself as well as for other people. One of most satisfying aspects of the programming is seeing code you wrote deployed in a live environment</p>
                 </div>
-
-                <div class="column">
-                    <img id="interest" src="assets/images/programming.jpg" height="100%" width="100%">
+                <div class="col-lg-4">
+                    <img class="laptop-img" src="assets/images/programming.jpg" alt="laptop">
                 </div>
+                <div class="col-lg-4"></div>
 
-                <div class="column">
-
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4">
+                    <img class="fitness-img" src="assets/images/sports.jpg" alt="fitness">
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="column">
-
-                </div>
-
-                <div class="column">
-                    <img id="interest" src="assets/images/sports.jpg" height="v" width="100%">
-                </div>
-
-                <div class="column left-comment">
+                <div class="col-lg-4 fitness-info">
                     <h2>Fitness</h2>
                     <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="column right-comment">
+                <div class="col-lg-4 cooking-info">
                     <h2>Cooking</h2>
                     <p>I enjoy cooking i find it extremely interesting cooking different cuisines as well as making something out of different ingredients and spices.</p>
                 </div>
-
-                <div class="column">
-                    <img id="interest" src="assets/images/cooking.jpg" height="100%" width="100%">
+                <div class="col-lg-4">
+                    <img class="cooking-img" src="assets/images/cooking.jpg" alt="laptop">
                 </div>
-
-                <div class="column">
-
-                </div>
+                <div class="col-lg-4 travel-info"></div>
             </div>
+
+
 
         </div>
-    </section>
 
-    <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
-    <footer class="footer-brief">
-        <div class="row no-gutter footer-container">
+        <footer>
+            <div class="footer-section">
+                <div class="row">
+                    <div class="col-lg-4 quicklinks">
+                        <h4>Quick Links</h4>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <a href="#">Home</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#">Portfolio</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#">My Journey</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#">Connect</a>
+                            </div>
+                        </div>
 
-            <!--splitting the section focusing on the quck links -->
-            <div class="col-12 col-md-4 quick-links">
-
-                <h5 id="qlabel">Quick Links</h5>
-                <div class="qlinks">
-                    <a href="contact_me.html" class="foot-email">
-                        <h5 id="email_address_head">Home</h5>
-                    </a>
-
-                    <a href="my_projects.html" class="foot-projects">
-                        <h5 id="project_footer_head">My Journey</h5>
-                    </a>
-
-                    <a href="my_projects.html" class="foot-projects">
-                        <h5 id="project_footer_head">Portfolio</h5>
-                    </a>
-
-                    <a href="my_projects.html" class="foot-projects">
-                        <h5 id="project_footer_head">Connect</h5>
-                    </a>
-
-                </div>
-            </div>
-
-            <!--splitting the section focusing on the social links using the icons from font awesome-->
-            <div class="col-12 col-md-4 social_links">
-                <h5 id="qlabels">Let's Connect</h5>
-
-                <div class="logos">
-
-                    <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
-
-                    <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-
-                    <a href="https://twitter.com/adnanmuhtadi" target="_blank"><i class="fab fa-twitter"></i></a>
-
-                    <a href="https://www.youtube.com/channel/UCt64hh9dMACG43Vuzc5DrtQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
-
-                    <a href="https://www.linkedin.com/in/adnan-muhtadi-3588243b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-
-                    <a href="https://www.snapchat.com/l/en-gb/" target="_blank"><i class="fab fa-snapchat"></i></a>
-
-                    <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
-
-                    <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
-                </div>
-
-            </div>
-
-            <!--splitting the section focusing on the CV download -->
-            <div class="col-12 col-md-4">
-
-                <h5 id="qlabels">Take A Copy Of My CV!</h5>
-                <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">
-                    <div class="logos">
-                        <i class="fas fa-file" aria-hidden="true"></i>
                     </div>
-                </a>
-            </div>
-        </div>
-    </footer>
 
-</body>
+                    <div class="col-lg-4 connect">
+                        <h4>Lets Connect</h4>
+                        <div class="social-logos">
+                            <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
+
+                            <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+
+                            <a href="https://twitter.com/adnanmuhtadi" target="_blank"><i class="fab fa-twitter"></i></a>
+
+                            <a href="https://www.youtube.com/channel/UCt64hh9dMACG43Vuzc5DrtQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
+
+                            <a href="https://www.linkedin.com/in/adnan-muhtadi-3588243b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+
+                            <a href="https://www.snapchat.com/l/en-gb/" target="_blank"><i class="fab fa-snapchat"></i></a>
+
+                            <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
+
+                            <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
+
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mycv">
+                        <h4>Take A Copy Of My CV!</h4>
+                        <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
+    </body>
 
 </html>
