--- a/journey.html
+++ b/journey.html
@@ -1,114 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Adnan Muhtadi Portfolio</title>
-
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-
-    <!-- font awesome for icons -->
-    <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
-
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" type="text/css" />
+        <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+        <title>Adnan Muhtadi Portfolio</title>
+    </head>
 
 <body>
 
     <!--        navigation bar with the active class when on the actual page  -->
-    <header>
-        <a href="index.html">
-            <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
-        </a>
+    <nav>
+        <div class="row nav-section">
+            <div class="col-lg-4 mainhome">
+                <h1><a href="index.html">Adnan Muhtadi</a></h1>
+            </div>
 
-        <nav>
-            <ul id="navbar-menu">
-                <li>
-                    <a href="connect.html">Connect</a>
-                </li>
+            <div class="col-lg-1"></div>
+            <div class="col-lg-1"></div>
 
-                <li>
-                    <a href="portfolio.html">Portfolio</a>
-                </li>
+            <div class="col-lg-2 active right">
+                <h2><a href="journey.html">My Journey</a></h2>
+            </div>
 
-                <li>
-                    <a class="active" href="journey.html">My Journey</a>
-                </li>
+            <div class="col-lg-2 right">
+                <h2><a href="portfolio.html">My Portfolio</a></h2>
+            </div>
 
-            </ul>
-        </nav>
-    </header>
+            <div class="col-lg-2 right">
+                <h2><a href="connect.html">Connect</a></h2>
+            </div>
+        </div>
+    </nav>
 
 
     <!--image header of the page-->
     <section id="main-space">
-        <div id=main-image2></div>
-        <div id="main-me" style="text-align: center;">
+        <div class="row header-section">
+            <div class="col-lg-12 bg-image2"></div>
         </div>
     </section>
 
-<!--   the section where the content of my journey would be placed -->
+    <!--   the section where the content of my journey would be placed -->
     <section id="about-me">
-        <h2 id="header">From The Beginning</h2>
+        <h2 class="title">From The Beginning</h2>
 
-<!-- having dates, places of where it took place, and my roles-->
-        <div class="journey">
-            <div class="journey-item" journey-dates="May 19th 1990">
-                <h4>Date of Birth</h4>
-                <p>The journey begins</p>
+        <!-- having dates, places of where it took place, and my roles-->
+        <div class="row">
+            <div class="col-4">
+
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <div class="col-md-3 col-sm-2 skill-label">
+                    <label for="html5">html5</label>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar html5" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
             </div>
 
-            <div class="journey-item" journey-dates="December 4th 2006">
-                <h4>Leisure Connection</h4>
-                <p>Life Guard / Swimming Teacher Assistant</p>
-            </div>
 
-            <div class="journey-item" journey-dates="September 3rd 2007">
-                <h4>Oaklands College</h4>
-                <p>BTEC National Diploma for ICT Practioners (Distinction)</p>
-            </div>
+            <div class="col-8">
+                <div class="journey">
+                    <div class="journey-item " journey-dates="May 19th 1990">
+                        <h4>Date of Birth</h4>
+                        <p>The journey begins</p>
+                    </div>
 
-            <div class="journey-item" journey-dates="March 9th 2008">
-                <h4>Verulam Swimming Club ASC</h4>
-                <p>Website Administrator</p>
-            </div>
+                    <div class="journey-item" journey-dates="December 4th 2006">
+                        <h4>Leisure Connection</h4>
+                        <p>Life Guard / Swimming Teacher Assistant</p>
+                    </div>
 
-            <div class="journey-item" journey-dates="September 7th 2009">
-                <h4>Graduated in Information Technology </h4><h4>(Web-Based Systems) BSc (Hons) - 2.1</h4>
-                <p>University of Hertfordshire</p>
-            </div>
+                    <div class="journey-item" journey-dates="September 3rd 2007">
+                        <h4>Oaklands College</h4>
+                        <p>BTEC National Diploma for ICT Practioners (Distinction)</p>
+                    </div>
 
-            <div class="journey-item" journey-dates="June 20th 2011">
-                <h4>Viglen LTD</h4>
-                <p>ERP Configurator (Internship)</p>
-            </div>
+                    <div class="journey-item" journey-dates="March 9th 2008">
+                        <h4>Verulam Swimming Club ASC</h4>
+                        <p>Website Administrator</p>
+                    </div>
 
-            <div class="journey-item" journey-dates="May 12th 2014">
-                <h4>Hogarth WorldWide</h4>
-                <p>Application Support Analyst</p>
-                <p>Service Delivery Engineer</p>
-                <p>Technical Project Manager</p>
-            </div>
+                    <div class="journey-item" journey-dates="September 7th 2009">
+                        <h4>Graduated in Information Technology </h4>
+                        <h4>(Web-Based Systems) BSc (Hons) - 2.1</h4>
+                        <p>University of Hertfordshire</p>
+                    </div>
 
-            <div class="journey-item" journey-dates="July 18th 2018">
-                <h4>Giant Group</h4>
-                <p>Project Manager</p>
-            </div>
+                    <div class="journey-item" journey-dates="June 20th 2011">
+                        <h4>Viglen LTD</h4>
+                        <p>ERP Configurator (Internship)</p>
+                    </div>
 
-            <div class="journey-item" journey-dates="February 11th 2019">
-                <h4>McCann Worldgroup</h4>
-                <p>Product Manager</p>
-            </div>
+                    <div class="journey-item" journey-dates="May 12th 2014">
+                        <h4>Hogarth WorldWide</h4>
+                        <p>Application Support Analyst</p>
+                        <p>Service Delivery Engineer</p>
+                        <p>Technical Project Manager</p>
+                    </div>
 
-            <div class="journey-item" journey-dates="August 10th 2020">
-                <h4>ITOM Solution</h4>
-                <p>Project Manager</p>
+                    <div class="journey-item" journey-dates="July 18th 2018">
+                        <h4>Giant Group</h4>
+                        <p>Project Manager</p>
+                    </div>
+
+                    <div class="journey-item" journey-dates="February 11th 2019">
+                        <h4>McCann Worldgroup</h4>
+                        <p>Product Manager</p>
+                    </div>
+
+                    <div class="journey-item" journey-dates="August 10th 2020">
+                        <h4>ITOM Solution</h4>
+                        <p>Project Manager</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+
+
 
         <div class="journey-finisher">
             <h3><a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">CLICK HERE </a>to know more about me</h3>
@@ -117,68 +141,57 @@
 
 
     <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
-    <footer class="footer-brief">
-        <div class="row no-gutter footer-container">
-
-            <!--splitting the section focusing on the quck links -->
-            <div class="col-12 col-md-4 quick-links">
-
-                <h5 id="qlabel">Quick Links</h5>
-                <div class="qlinks">
-                    <a href="contact_me.html" class="foot-email">
-                        <h5 id="email_address_head">Home</h5>
-                    </a>
-
-                    <a href="my_projects.html" class="foot-projects">
-                        <h5 id="project_footer_head">My Journey</h5>
-                    </a>
-
-                    <a href="my_projects.html" class="foot-projects">
-                        <h5 id="project_footer_head">Portfolio</h5>
-                    </a>
-
-                    <a href="my_projects.html" class="foot-projects">
-                        <h5 id="project_footer_head">Connect</h5>
-                    </a>
-
-                </div>
-            </div>
-
-            <!--splitting the section focusing on the social links using the icons from font awesome-->
-            <div class="col-12 col-md-4 social_links">
-                <h5 id="qlabels">Let's Connect</h5>
-
-                <div class="logos">
-
-                    <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
-
-                    <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-
-                    <a href="https://twitter.com/adnanmuhtadi" target="_blank"><i class="fab fa-twitter"></i></a>
-
-                    <a href="https://www.youtube.com/channel/UCt64hh9dMACG43Vuzc5DrtQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
-
-                    <a href="https://www.linkedin.com/in/adnan-muhtadi-3588243b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-
-                    <a href="https://www.snapchat.com/l/en-gb/" target="_blank"><i class="fab fa-snapchat"></i></a>
-
-                    <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
-
-                    <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
-                </div>
-
-            </div>
-            <!--splitting the section focusing on the CV download -->
-            <div class="col-12 col-md-4">
-
-                <h5 id="qlabels">Take A Copy Of My CV!</h5>
-                <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">
-                    <div class="logos">
-                        <i class="fas fa-file" aria-hidden="true"></i>
+    <footer>
+        <div class="footer-section">
+            <div class="row">
+                <div class="col-lg-4 quicklinks">
+                    <h4>Quick Links</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="col-lg-6">
+                            <a href="#">Portfolio</a>
+                        </div>
+                        <div class="col-lg-6">
+                            <a href="#">My Journey</a>
+                        </div>
+                        <div class="col-lg-6">
+                            <a href="#">Connect</a>
+                        </div>
                     </div>
-                </a>
+
+                </div>
+
+                <div class="col-lg-4 connect">
+                    <h4>Lets Connect</h4>
+                    <div class="social-logos">
+                        <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
+
+                        <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+
+                        <a href="https://twitter.com/adnanmuhtadi" target="_blank"><i class="fab fa-twitter"></i></a>
+
+                        <a href="https://www.youtube.com/channel/UCt64hh9dMACG43Vuzc5DrtQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
+
+                        <a href="https://www.linkedin.com/in/adnan-muhtadi-3588243b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+
+                        <a href="https://www.snapchat.com/l/en-gb/" target="_blank"><i class="fab fa-snapchat"></i></a>
+
+                        <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
+
+                        <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4 mycv">
+                    <h4>Take A Copy Of My CV!</h4>
+                    <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file" aria-hidden="true"></i></a>
+                </div>
             </div>
         </div>
+
     </footer>
 
 </body>
