Mobile responsive for index
created media queries for the index.html mobile size version

--- a/connect.html
+++ b/connect.html
@@ -39,7 +39,7 @@
     <!--image header of the page with the main space defining the area and the main image is the jumbroton image -->
     <header>
         <div class="row no-gutter header-section">
-            <div class="col-lg-12 bg-image4"></div>
+            <div class="col-12 col-lg-12 bg-image4"></div>
 
             <!-- the text within the main image -->
             <div class="main-me-text">
