--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header>
             <div class="row no-gutter header-section">
                 <div class="col-lg-12 bg-image1"></div>
-                <div class="col-lg-12">
+                <div class="col-12 col-lg-12">
                     <img class="profile-pic" src="assets/images/me.jpg" alt="Profile Picture">
                     <h2>Project Manager / Trainee Full Stack Developer</h2>
                     <h3>Personal Portfolio</h3>
@@ -59,45 +59,51 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row interests">
                 <div class="col-lg-12">
                     <h1 class="title">Interests</h1>
                 </div>
-                <div class="col-lg-4"></div>
-                <div class="col-lg-4">
+                <div class="col-12 col-lg-4 left-travelhidden">
+                   <h2>Travelling</h2>
+                    <p>Exploring the world and seeing the different nature beauties that it provides. Experience something unfamiliar and leave with new skills or knowledge</p>
+                    </div>
+                <div class="col-12 col-lg-4">
                     <img class="plane-img" src="assets/images/travelling.jpg" alt="Plane">
                 </div>
-                <div class="col-lg-4 travel-info">
+                <div class="col-12 col-lg-4 travel-info">
                     <h2>Travelling</h2>
                     <p>Exploring the world and seeing the different nature beauties that it provides. Experience something unfamiliar and leave with new skills or knowledge</p>
                 </div>
-
-                <div class="col-lg-4 programming-info">
+                
+                <div class="col-12 col-lg-4 programming-info">
                     <h2>Programming</h2>
                     <p>The pleasure of making things that are useful to yourself as well as for other people. One of most satisfying aspects of the programming is seeing code you wrote deployed in a live environment</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-12 col-lg-4">
                     <img class="laptop-img" src="assets/images/programming.jpg" alt="laptop">
                 </div>
-                <div class="col-lg-4"></div>
 
-                <div class="col-lg-4"></div>
-                <div class="col-lg-4">
+                <div class="col-12 col-lg-4"></div>
+                <div class="col-12 col-lg-4 left-fitnesshidden">
+                    <h2>Fitness</h2>
+                    <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
+                </div>
+                <div class="col-12 col-lg-4">
                     <img class="fitness-img" src="assets/images/sports.jpg" alt="fitness">
                 </div>
-                <div class="col-lg-4 fitness-info">
+                <div class="col-12 col-lg-4 fitness-info">
                     <h2>Fitness</h2>
                     <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
                 </div>
 
-                <div class="col-lg-4 cooking-info">
+                <div class="col-12 col-lg-4 cooking-info">
                     <h2>Cooking</h2>
                     <p>I enjoy cooking i find it extremely interesting cooking different cuisines as well as making something out of different ingredients and spices.</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-12 col-lg-4">
                     <img class="cooking-img" src="assets/images/cooking.jpg" alt="laptop">
                 </div>
-                <div class="col-lg-4 travel-info"></div>
+                <div class="col-12 col-lg-4 travel-info"></div>
             </div>
 
 
@@ -110,16 +116,17 @@
                     <div class="col-lg-4 quicklinks">
                         <h4>Quick Links</h4>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col col-lg-6">
                                 <a href="#">Home</a>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col col-lg-6">
                                 <a href="#">Portfolio</a>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="w-100"></div>
+                            <div class="col col-lg-6">
                                 <a href="#">My Journey</a>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col col-lg-6">
                                 <a href="#">Connect</a>
                             </div>
                         </div>
