reformating the images used
The images where not working they way i wanted and so i reformatted the images for them to be all the same size. This way when it is responsive, it will all be the same size.

--- a/connect.html
+++ b/connect.html
@@ -52,8 +52,8 @@
     </header>
 
     <!-- The body of the content displayed which is for the questoin and contact form -->
-    <section id="content">
-        <h2 class="title">A Few Ways To Reach Out!</h2>
+    <div class="main-section">
+        <h1 class="title">A Few Ways To Reach Out!</h1>
 
         <!-- the questions to bring the users attention-->
         <div class="main-content questions">
@@ -118,7 +118,8 @@
 
             </div>
         </div>
-    </section>
+
+    </div>
 
     <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
     <footer>
@@ -127,16 +128,17 @@
                 <div class="col-lg-4 quicklinks">
                     <h4>Quick Links</h4>
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col col-lg-6">
                             <a href="#">Home</a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col col-lg-6">
                             <a href="#">Portfolio</a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="w-100"></div>
+                        <div class="col col-lg-6">
                             <a href="#">My Journey</a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col col-lg-6">
                             <a href="#">Connect</a>
                         </div>
                     </div>
