adjustment to images
adjusted images

--- a/connect.html
+++ b/connect.html
@@ -44,8 +44,8 @@
             <!-- the text within the main image -->
             <div class="main-me-text">
                 <div class="connect-title">
-                    <h1>No Such Thing As<br>
-                        A Silly Question</h1>
+                    <h1>There is no such thing as<br>
+                        a silly question!</h1>
                 </div>
             </div>
         </div>
@@ -61,6 +61,7 @@
             Looking to know more about me? <br>
             or even looking for an idea to be developed?
         </div>
+    </div>
         <br>
         <br>
 
@@ -119,7 +120,6 @@
             </div>
         </div>
 
-    </div>
 
     <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
     <footer>
