--- a/journey.html
+++ b/journey.html
@@ -201,7 +201,7 @@
                 </div>
             </div>
 
-            <div class="journey-finisher">
+            <div class="col-12 col-sm-12 journey-finisher">
                 <h3><a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">CLICK HERE </a>to know more about me</h3>
             </div>
         </section>
