--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 <body>
     <!--        navigation bar with the active class when on the actual page  -->
     <nav>
-        <div class="row nav-section">
-            <div class="col-lg-4 active mainhome">
+        <div class="row nav-section nav">
+            <div class="col-4 col-lg-4 nav-link active mainhome">
                 <h1><a href="index.html">Adnan Muhtadi</a></h1>
             </div>
 
-            <div class="col-lg-1"></div>
-            <div class="col-lg-1"></div>
+            <div class="col-1 col-lg-1"></div>
+            <div class="col-1 col-lg-1"></div>
 
-            <div class="col-lg-2 right">
+            <div class="col-2 col-lg-2 col-sm-2 right">
                 <h2><a href="journey.html">My Journey</a></h2>
             </div>
 
-            <div class="col-lg-2 right">
+            <div class="col-2 col-lg-2 right">
                 <h2><a href="portfolio.html">My Portfolio</a></h2>
             </div>
 
-            <div class="col-lg-2 right">
+            <div class="col-2 col-lg-2 right">
                 <h2><a href="connect.html">Connect</a></h2>
             </div>
         </div>
@@ -38,7 +38,7 @@
 
     <header>
         <div class="row no-gutter header-section">
-            <div class="col-lg-12 bg-image1"></div>
+            <div class="col-12 col-lg-12 col-md-12 bg-image1"></div>
             <div class="col-12 col-lg-12">
                 <img class="profile-pic" src="assets/images/me.jpg" alt="Profile Picture">
                 <h2>Project Manager / Trainee Full Stack Developer</h2>
@@ -67,19 +67,19 @@
                 <h2>Travelling</h2>
                 <p>Exploring the world and seeing the different nature beauties that it provides. Experience something unfamiliar and leave with new skills or knowledge</p>
             </div>
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 col-md-5">
                 <img class="plane-img" src="assets/images/travelling.jpg" alt="Plane">
             </div>
-            <div class="col-12 col-lg-4 travel-info">
+            <div class="col-12 col-lg-4 col-md-7 travel-info">
                 <h2>Travelling</h2>
                 <p>Exploring the world and seeing the different nature beauties that it provides. Experience something unfamiliar and leave with new skills or knowledge</p>
             </div>
 
-            <div class="col-12 col-lg-4 programming-info">
+            <div class="col-12 col-lg-4 col-md-7 programming-info">
                 <h2>Programming</h2>
                 <p>The pleasure of making things that are useful to yourself as well as for other people. One of most satisfying aspects of the programming is seeing code you wrote deployed in a live environment</p>
             </div>
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 col-md-5">
                 <img class="laptop-img" src="assets/images/programming.jpg" alt="laptop">
             </div>
 
@@ -88,22 +88,21 @@
                 <h2>Fitness</h2>
                 <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
             </div>
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 col-md-5">
                 <img class="fitness-img" src="assets/images/sports.jpg" alt="fitness">
             </div>
-            <div class="col-12 col-lg-4 fitness-info">
+            <div class="col-12 col-lg-4 col-md-7 fitness-info">
                 <h2>Fitness</h2>
                 <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
             </div>
 
-            <div class="col-12 col-lg-4 cooking-info">
+            <div class="col-12 col-lg-4 col-md-7 cooking-info">
                 <h2>Cooking</h2>
                 <p>I enjoy cooking i find it extremely interesting cooking different cuisines as well as making something out of different ingredients and spices.</p>
             </div>
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 col-md-5">
                 <img class="cooking-img" src="assets/images/cooking.jpg" alt="laptop">
             </div>
-            <div class="col-12 col-lg-4 travel-info"></div>
         </div>
 
 
