--- a/journey.html
+++ b/journey.html
@@ -14,23 +14,23 @@
 
     <!--        navigation bar with the active class when on the actual page  -->
     <nav>
-        <div class="row nav-section">
-            <div class="col-lg-4 mainhome">
+        <div class="row nav-section nav">
+            <div class="col-4 col-lg-4 nav-link mainhome">
                 <h1><a href="index.html">Adnan Muhtadi</a></h1>
             </div>
 
-            <div class="col-lg-1"></div>
-            <div class="col-lg-1"></div>
+            <div class="col-1 col-lg-1"></div>
+            <div class="col-1 col-lg-1"></div>
 
-            <div class="col-lg-2 active right">
+            <div class="col-2 col-lg-2 col-sm-2 active right">
                 <h2><a href="journey.html">My Journey</a></h2>
             </div>
 
-            <div class="col-lg-2 right">
+            <div class="col-2 col-lg-2 right">
                 <h2><a href="portfolio.html">My Portfolio</a></h2>
             </div>
 
-            <div class="col-lg-2 right">
+            <div class="col-2 col-lg-2 right">
                 <h2><a href="connect.html">Connect</a></h2>
             </div>
         </div>
