HTML and CSS validated via W3C corrections

--- a/connect.html
+++ b/connect.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="row nav-section nav">
             <div class="col-4 col-lg-4 nav-link mainhome">
-                <h1><a href="index.html">Adnan Muhtadi</a></h1>
+                <h2 id="myname"><a href="index.html">Adnan Muhtadi</a></h2>
             </div>
 
             <div class="col-1 col-lg-1"></div>
@@ -73,7 +73,7 @@
                 <form>
                     <div class="form-group row">
                         <div class="col-md-3 col-sm-2 col-form-label labelatt">
-                            <label for="full-name">Full Name:</label>
+                            <label for="user-fullname">Full Name:</label>
                         </div>
                         <div class="col-md-9 col-sm-10">
                             <input type="text" class="form-control" id="user-fullname">
