--- a/journey.html
+++ b/journey.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="row nav-section nav">
             <div class="col-4 col-lg-4 nav-link mainhome">
-                <h1><a href="index.html">Adnan Muhtadi</a></h1>
+                <h2 id="myname"><a href="index.html">Adnan Muhtadi</a></h2>
             </div>
 
             <div class="col-1 col-lg-1"></div>
@@ -52,91 +52,91 @@
             <div class="col-4 progress-skills">
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="html5">HTML5 / CSS3</label>
+                    <label>HTML5 / CSS3</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar html5" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">85%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="java">JavaScript / jQuery</label>
+                    <label>JavaScript / jQuery</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar java" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">70%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="sql">SQL</label>
+                    <label>SQL</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar sql" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="python">Python</label>
+                    <label>Python</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar python" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="php">PHP</label>
+                    <label>PHP</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar php" role="progressbar" style="width: 40%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">40%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="zendesk">Zendesk</label>
+                    <label>Zendesk</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar zendesk" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">90%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="servicenow">ServiceNow</label>
+                    <label>ServiceNow</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar servicenow" role="progressbar" style="width: 45%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">45%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="product">Product Management</label>
+                    <label>Product Management</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar product" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">70%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="office">Office 365</label>
+                    <label>Office 365</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar office" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">80%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="pm">Project Management</label>
+                    <label>Project Management</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar pm" role="progressbar" style="width: 65%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">65%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="jira">Jira</label>
+                    <label>Jira</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar jira" role="progressbar" style="width: 75%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">75%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="github">Github</label>
+                    <label>Github</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar github" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">85%</div>
                 </div>
 
                 <div class="col-md-12 col-sm-2 skill-label">
-                    <label for="arabic">Arabic</label>
+                    <label>Arabic</label>
                 </div>
                 <div class="progress">
                     <div class="progress-bar arabic" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">90%</div>
@@ -146,55 +146,55 @@
 
             <div class="col-8">
                 <div class="journey">
-                    <div class="journey-item " journey-dates="May 19th 1990">
+                    <div class="journey-item " data-journeydates="May 19th 1990">
                         <h4>Date of Birth</h4>
                         <p>The journey begins</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="December 4th 2006">
+                    <div class="journey-item" data-journeydates="December 4th 2006">
                         <h4>Leisure Connection</h4>
                         <p>Life Guard / Swimming Teacher Assistant</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="September 3rd 2007">
+                    <div class="journey-item" data-journeydates="September 3rd 2007">
                         <h4>Oaklands College</h4>
                         <p>BTEC National Diploma for ICT Practioners (Distinction)</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="March 9th 2008">
+                    <div class="journey-item" data-journeydates="March 9th 2008">
                         <h4>Verulam Swimming Club ASC</h4>
                         <p>Website Administrator</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="September 7th 2009">
+                    <div class="journey-item" data-journeydates="September 7th 2009">
                         <h4>Graduated in Information Technology </h4>
                         <h4>(Web-Based Systems) BSc (Hons) - 2.1</h4>
                         <p>University of Hertfordshire</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="June 20th 2011">
+                    <div class="journey-item" data-journeydates="June 20th 2011">
                         <h4>Viglen LTD</h4>
                         <p>ERP Configurator (Internship)</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="May 12th 2014">
+                    <div class="journey-item" data-journeydates="May 12th 2014">
                         <h4>Hogarth WorldWide</h4>
                         <p>Application Support Analyst</p>
                         <p>Service Delivery Engineer</p>
                         <p>Technical Project Manager</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="July 18th 2018">
+                    <div class="journey-item" data-journeydates="July 18th 2018">
                         <h4>Giant Group</h4>
                         <p>Project Manager</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="February 11th 2019">
+                    <div class="journey-item" data-journeydates="February 11th 2019">
                         <h4>McCann Worldgroup</h4>
                         <p>Product Manager</p>
                     </div>
 
-                    <div class="journey-item" journey-dates="August 10th 2020">
+                    <div class="journey-item" data-journeydates="August 10th 2020">
                         <h4>ITOM Solution</h4>
                         <p>Project Manager</p>
                     </div>
