--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="row nav-section nav">
             <div class="col-4 col-lg-4 nav-link mainhome">
-                <h1><a href="index.html">Adnan Muhtadi</a></h1>
+                <h2 id="myname"><a href="index.html">Adnan Muhtadi</a></h2>
             </div>
 
             <div class="col-1 col-lg-1"></div>
@@ -63,7 +63,7 @@
                         <h4><b>Love Running</b></h4>
                         <p>A scheduled based for individuals who would like to run as well as a photo gallery to show the fun that is part of the group.</p>
                     </div>
-                    <a href="assets/portfolio-sites/love-running/index.html" target="_blank" button type="button" class="btn btn-primary visitme" value="Submit">Visit Me!</a>
+                    <a href="assets/portfolio-sites/love-running/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                         <h4><b>Stream</b></h4>
                         <p>To educate individuals how to program as well as well as short cuts to different online tools that is involved in building websites </p>
                     </div>
-                    <a href="assets/portfolio-sites/stream/index.html" target="_blank" button type="button" class="btn btn-primary visitme" value="Submit">Visit Me!</a>
+                    <a href="assets/portfolio-sites/stream/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
             </div>
 
@@ -87,7 +87,7 @@
                         <h4><b>Whisky Drop</b></h4>
                         <p>To advertise a promotion on whisky that is currently on offer when signing up to a monthly subscritpion.</p>
                     </div>
-                    <a href="assets/portfolio-sites/whiskey-drop/index.html" target="_blank" button type="button" class="btn btn-primary visitme" value="Submit">Visit Me!</a>
+                    <a href="assets/portfolio-sites/whiskey-drop/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
             </div>
 
@@ -99,7 +99,7 @@
                         <h4><b>Rosie Resume</b></h4>
                         <p>To create an online Resume for Rosie which show tells her skills as have access to her CV. With quick links to her soical media. </p>
                     </div>
-                    <a href="assets/portfolio-sites/resume-project/index.html" target="_blank" button type="button" class="btn btn-primary visitme" value="Submit">Visit Me!</a>
+                    <a href="assets/portfolio-sites/resume-project/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
             </div>
 
