--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="row nav-section nav">
             <div class="col-4 col-lg-4 nav-link active mainhome">
-                <h1><a href="index.html">Adnan Muhtadi</a></h1>
+                <h2 id="myname"><a href="index.html">Adnan Muhtadi</a></h2>
             </div>
 
             <div class="col-1 col-lg-1"></div>
@@ -65,19 +65,19 @@
             </div>
             <div class="col-12 col-lg-4 left-travelhidden">
                 <h2>Travelling</h2>
-                <p>Exploring the world and seeing the different nature beauties that it provides. Experience something unfamiliar and leave with new skills or knowledge</p>
+                <p>Exploring the world and seeing the different nature beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
             </div>
             <div class="col-12 col-lg-4 col-md-5">
                 <img class="plane-img" src="assets/images/travelling.jpg" alt="Plane">
             </div>
             <div class="col-12 col-lg-4 col-md-7 travel-info">
                 <h2>Travelling</h2>
-                <p>Exploring the world and seeing the different nature beauties that it provides. Experience something unfamiliar and leave with new skills or knowledge</p>
+                <p>Exploring the world and seeing the different nature beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
             </div>
 
             <div class="col-12 col-lg-4 col-md-7 programming-info">
                 <h2>Programming</h2>
-                <p>The pleasure of making things that are useful to yourself as well as for other people. One of most satisfying aspects of the programming is seeing code you wrote deployed in a live environment</p>
+                <p>The pleasure of making things that are useful to yourself as well as for other people. One of most satisfying aspects of the programming is seeing code you wrote deployed in a live environment.</p>
             </div>
             <div class="col-12 col-lg-4 col-md-5">
                 <img class="laptop-img" src="assets/images/programming.jpg" alt="laptop">
@@ -98,7 +98,7 @@
 
             <div class="col-12 col-lg-4 col-md-7 cooking-info">
                 <h2>Cooking</h2>
-                <p>I enjoy cooking i find it extremely interesting cooking different cuisines as well as making something out of different ingredients and spices.</p>
+                <p>I enjoy cooking, as I find it extremely interesting cooking different cuisines, as well as making something out of different ingredients and spices.</p>
             </div>
             <div class="col-12 col-lg-4 col-md-5">
                 <img class="cooking-img" src="assets/images/cooking.jpg" alt="laptop">
