Code clean up on the styling sheet

--- a/connect.html
+++ b/connect.html
@@ -21,15 +21,15 @@
             <div class="col-1 col-lg-1"></div>
             <div class="col-1 col-lg-1"></div>
 
-            <div class="col-2 col-lg-2 col-sm-2 right">
+            <div class="col-2 col-lg-2 col-md-2 col-sm-2 right">
                 <h2><a href="journey.html">My Journey</a></h2>
             </div>
 
-            <div class="col-2 col-lg-2 right">
+            <div class="col-2 col-lg-2 col-md-2 right">
                 <h2><a href="portfolio.html">My Portfolio</a></h2>
             </div>
 
-            <div class="col-2 col-lg-2 active right">
+            <div class="col-2 col-lg-2 col-md-2 active right">
                 <h2><a href="connect.html">Connect</a></h2>
             </div>
         </div>
@@ -62,8 +62,8 @@
             or even looking for an idea to be developed?
         </div>
     </div>
-        <br>
-        <br>
+
+
 
         <!--grouping the form in a seperate div to provide it with a background with each input type assoicated with a label     -->
         <div class="connect-form">
