fixed issues around the responsiveness on mobile size

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row no-gutter header-section">
             <div class="col-lg-12 bg-image1"></div>
                 <div class="col-12 col-lg-12 col-md-12 profile-pic1">
-                    <img class="profile-pic2" src="assets/images/me.jpg" alt="Profile Picture">
+                    <img class="profile-pic2 row" src="assets/images/me.jpg" alt="Profile Picture">
                     <h2>Project Manager / Trainee Full Stack Developer</h2>
                     <h3>Personal Portfolio</h3>
                 </div>
